fix bug position sticky and z-index in Toolbar

--- a/src/components/FilterInput/FilterInput.pcss
+++ b/src/components/FilterInput/FilterInput.pcss
@@ -4,12 +4,13 @@
   width: calc(100% - var(--gap) * 5);
 
   &__icon {
-    padding: var(--gap);
+    padding: calc(var(--gap) * 1.4);
 
     img {
       height: 17px;
       width: 17px;
     }
+    
   }
 
   &__input {
