--- a/src/components/Markets/Markets.pcss
+++ b/src/components/Markets/Markets.pcss
@@ -103,10 +103,10 @@
 
     input {
       background: var(--input-background-color);
-      border-bottom: 1px solid var(--divider-color-level-3);
+      /*border-bottom: 1px solid var(--divider-color-level-3);*/
       color: var(--input-text-color);
       font-weight: lighter;
-      width: calc(100% - var(--gap) * 9);
+      width: 100%;
 
       &::placeholder {
         color: var(--input-placeholder-color);
