--- a/src/containers/Markets/Markets.pcss
+++ b/src/containers/Markets/Markets.pcss
@@ -21,15 +21,14 @@
       background: var(--body-background-color);
       bottom: 0;
       display: flex;
-      padding: calc(var(--gap) * 0.83) var(--gap) calc(var(--gap) * 0.83) 0;
-      position: fixed;
+      padding: calc(var(--gap) * 0.83);
+      position: absolute;
       width: 100%;
       z-index: 9999;
 
       &__icon {
-        background: transparent;
+        background: var(--input-background-color);
         display: flex;
-        opacity: 0.5;
         padding-bottom: 0;
         padding-left: calc(var(--gap) * 2);
       }
