--- a/src/containers/OrderBook/OrderBook.pcss
+++ b/src/containers/OrderBook/OrderBook.pcss
@@ -247,7 +247,8 @@
 
       &-market {
         border-top: 1px solid var(--order-book-last-market-price-border-color);
-        position: fixed;
+        /*position: fixed;*/
+        padding: 0 12px;
       }
 
       .cr-table-background {
