--- a/src/containers/ToolBar/MarketSelector/MarketSelector.pcss
+++ b/src/containers/ToolBar/MarketSelector/MarketSelector.pcss
@@ -25,7 +25,8 @@
   }
 
   &-search {
-    border: solid 1px var(--input-border-color);
+    /*border: solid 1px var(--input-border-color);*/
+    background: var(--input-background-color);
     border-radius: 4px;
     display: flex;
     height: calc(var(--big-gap) * 0.7);
@@ -34,7 +35,7 @@
 
     &-icon {
       align-items: center;
-      border-right: solid 1px var(--input-border-color);
+      /*border-right: solid 1px var(--input-border-color);*/
       display: flex;
       height: 100%;
       justify-content: center;
@@ -42,7 +43,7 @@
     }
 
     &-field {
-      background: none;
+      background: var(--input-background-color);
       border: none;
       color: var(--input-text-color);
       font-size: calc(var(--big-gap) * 0.25);
