--- a/src/screens/TradingScreen/TradingScreen.pcss
+++ b/src/screens/TradingScreen/TradingScreen.pcss
@@ -58,6 +58,7 @@
       overflow: auto;
       width: 100%;
       height: 50%;
+      z-index: 1;
     }
     .h-content{
       &-tradingChart{
@@ -67,7 +68,7 @@
         height: 223px;
       }
       &-order{
-        height: 450px;
+        height: 390px;
       }
       &-recentTrades{
         height: 375px;
